Styled blog card component

--- a/public/stylesheets/components/_content-sidebar.scss
+++ b/public/stylesheets/components/_content-sidebar.scss
@@ -16,7 +16,7 @@
         margin-bottom: 1rem;
     }
 
-    &__section button {
-        font-size: fSizes.$small;
+    &.-closed {
+        display: none;
     }
 }
