--- a/public/stylesheets/components/_icon-link.scss
+++ b/public/stylesheets/components/_icon-link.scss
@@ -12,4 +12,8 @@
         height: iSizes.$medium;
         width: iSizes.$medium;
     }
+
+    &.-left {
+        justify-content: flex-start;
+    }
 }
