--- a/public/stylesheets/components/_searchbar.scss
+++ b/public/stylesheets/components/_searchbar.scss
@@ -16,6 +16,9 @@
 
     &__icon {
         height: iSizes.$small;
+        width: iSizes.$small;
+        min-height: iSizes.$small;
+        min-width: iSizes.$small;
     }
 
     &__form {
