--- a/views/components/statList.pug
+++ b/views/components/statList.pug
@@ -2,6 +2,6 @@ mixin statList(...statItems)
     ul.stat-list&attributes(attributes)
         each item in statItems
             li.stat-list__item
-                .stat_list__icon
+                .stat-list__icon
                     img(src=item.icon)
                 .stat-list__stat= item.stat
