--- a/public/stylesheets/components/_blog-card.scss
+++ b/public/stylesheets/components/_blog-card.scss
@@ -1,3 +1,62 @@
+@use '../globals/colors';
+@use '../globals/font-sizes' as fSizes;
+@use '../globals/icon-sizes' as iSizes;
+
 .blog-card {
-    
+    height: 20rem;
+    width: 30rem;
+    display: flex;
+    border: 2px solid colors.$bg2;
+
+    &__overview {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        padding: 1rem;
+    }
+
+    &__author-date {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__author-details {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    &__avatar {
+        height: iSizes.$medium;
+        width: iSizes.$medium;
+    }
+
+    &__title {
+        margin: 0;
+        font-size: fSizes.$larger
+    }
+
+    &__preview {
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        margin: 0;
+        width: 100%;
+    }
+
+    &__keywords-heading {
+        font-weight: bold;
+        margin-bottom: -10px;
+    }
+
+    &__keywords {
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
 }
