--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,9 @@
 .account-sidebar__signup-prompt {
   height: 50%;
 }
+.account-sidebar.-closed {
+  display: none;
+}
 
 .action-list {
   display: flex;
@@ -24,6 +27,57 @@
   width: 2rem;
 }
 
+.blog-card {
+  height: 20rem;
+  width: 30rem;
+  display: flex;
+  border: 2px solid rgb(36, 36, 36);
+}
+.blog-card__overview {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+}
+.blog-card__author-date {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.blog-card__author-details {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.blog-card__avatar {
+  height: 2rem;
+  width: 2rem;
+}
+.blog-card__title {
+  margin: 0;
+  font-size: 1.4rem;
+}
+.blog-card__preview {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  margin: 0;
+  width: 100%;
+}
+.blog-card__keywords-heading {
+  font-weight: bold;
+  margin-bottom: -10px;
+}
+.blog-card__keywords {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .content-sidebar {
   left: 0;
   border-right: 2px solid rgb(36, 36, 36);
@@ -37,8 +91,8 @@
 .content-sidebar__section {
   margin-bottom: 1rem;
 }
-.content-sidebar__section button {
-  font-size: 0.8rem;
+.content-sidebar.-closed {
+  display: none;
 }
 
 .icon-button {
@@ -72,6 +126,9 @@
   height: 2rem;
   width: 2rem;
 }
+.icon-link.-left {
+  justify-content: flex-start;
+}
 
 .searchbar {
   display: flex;
@@ -86,6 +143,9 @@
 }
 .searchbar__icon {
   height: 1.5rem;
+  width: 1.5rem;
+  min-height: 1.5rem;
+  min-width: 1.5rem;
 }
 .searchbar__form {
   width: 100%;
@@ -96,6 +156,25 @@
   background: none;
   border: none;
   color: white;
+}
+
+.stat-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+  padding: 1rem;
+  border-right: 2px solid rgb(36, 36, 36);
+  font-size: 0.8rem;
+}
+.stat-list__item {
+  display: flex;
+  gap: 0.1rem;
+}
+.stat-list__icon {
+  height: 1.5rem;
+  width: 1.5rem;
 }
 
 .navbar {
@@ -118,15 +197,19 @@
 }
 .navbar__center {
   flex: 2;
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 .navbar__right {
   flex: 1;
   display: flex;
+  align-items: center;
   justify-content: flex-end;
+  gap: 2rem;
 }
 
 .page-container {
-  margin: 0;
+  overflow: auto;
   min-height: 100vh;
 }
 
@@ -145,6 +228,15 @@
 .sidebar__exit-icon {
   height: 2rem;
   width: 2rem;
+}
+
+.blog-card-pair {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 4rem;
+  margin-top: 2rem;
 }
 
 * {
