--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -130,6 +130,19 @@
   justify-content: flex-start;
 }
 
+.logging-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.logging-form__input {
+  margin-left: 1rem;
+}
+.logging-form__error {
+  color: red;
+  font-weight: bold;
+}
+
 .searchbar {
   display: flex;
   align-items: flex-end;
@@ -175,6 +188,25 @@
 .stat-list__icon {
   height: 1.5rem;
   width: 1.5rem;
+}
+
+.logging-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+.logging-page__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 5%;
+  padding: 4rem;
+  border: 2px solid rgb(36, 36, 36);
+}
+.logging-page__heading {
+  margin-top: 0;
 }
 
 .navbar {
@@ -275,6 +307,7 @@ a.-button:hover {
 
 body {
   margin: 0;
+  height: 100vh;
   min-height: 100vh;
   background-color: rgb(18, 18, 18);
 }
