--- a/views/components/accountSidebar.pug
+++ b/views/components/accountSidebar.pug
@@ -2,8 +2,7 @@ include actionList
 include iconButton
 
 #account-sidebar.account-sidebar.sidebar.-closed
-    .sidebar__top
-        +iconButton('/images/closeIcon.png')(id='account-sidebar-close-button')
+    .sidebar__title Account
     if user
         .account-overview 
             .account-overview__avatar Profile Pic
