--- a/views/components/contentSidebar.pug
+++ b/views/components/contentSidebar.pug
@@ -2,8 +2,7 @@ include actionList
 include iconButton
 
 #content-sidebar.content-sidebar.sidebar.-closed
-    .sidebar__top
-        +iconButton('/images/closeIcon.png')(id='content-sidebar-close-button')
+    .sidebar__title Content
     .content-sidebar__heading Recent
     .content-sidebar__section
         +actionList(
