Components folder refactor

--- a/public/stylesheets/components/list/_stat-list.scss
+++ b/public/stylesheets/components/list/_stat-list.scss
@@ -1,6 +1,6 @@
-@use '../globals/colors';
-@use '../globals/icon-sizes' as iSizes;
-@use '../globals/font-sizes' as fSizes;
+@use '../../globals/colors';
+@use '../../globals/icon-sizes' as iSizes;
+@use '../../globals/font-sizes' as fSizes;
 
 .stat-list {
     display: flex;
