--- a/views/components/list/actionList.pug
+++ b/views/components/list/actionList.pug
@@ -1,4 +1,4 @@
-include iconLink
+include ../icon/iconLink
 
 mixin actionList(...actionItems)
     ul.action-list&attributes(attributes.actionList)
