--- a/views/components/toolbar/accountSidebar.pug
+++ b/views/components/toolbar/accountSidebar.pug
@@ -1,5 +1,4 @@
-include actionList
-include iconButton
+include ../list/actionList
 
 #account-sidebar.account-sidebar.sidebar.-closed
     .sidebar__title Account
