--- a/views/pages/signupForm.pug
+++ b/views/pages/signupForm.pug
@@ -1,5 +1,5 @@
 extends ../layouts/logging
-include ../components/loggingForm
+include ../components/form/loggingForm
 
 block loggingForm
     h1.logging-page__heading Sign Up
