--- a/public/stylesheets/components/icon/_icon-link.scss
+++ b/public/stylesheets/components/icon/_icon-link.scss
@@ -1,5 +1,5 @@
-@use '../globals/font-sizes' as fSizes;
-@use '../globals/icon-sizes' as iSizes;
+@use '../../globals/font-sizes' as fSizes;
+@use '../../globals/icon-sizes' as iSizes;
 
 .icon-link {
     display: flex;
