--- a/public/stylesheets/components/toolbar/_content-sidebar.scss
+++ b/public/stylesheets/components/toolbar/_content-sidebar.scss
@@ -1,5 +1,5 @@
-@use '../globals/colors';
-@use '../globals/font-sizes' as fSizes;
+@use '../../globals/colors';
+@use '../../globals/font-sizes' as fSizes;
 
 .content-sidebar {
     left: 0;
