--- a/views/layouts/browser.pug
+++ b/views/layouts/browser.pug
@@ -9,7 +9,7 @@ block navbar
         )(class='-burger' id='navbar-burger-button')
         +iconLink('/images/favicon.png', '/', 'Tech Stack')
     .navbar__center 
-        include ../components/searchbar
+        include ../components/form/searchbar
     .navbar__right 
         if user
             +iconLink(
