--- a/public/stylesheets/components/toolbar/_account-sidebar.scss
+++ b/public/stylesheets/components/toolbar/_account-sidebar.scss
@@ -1,4 +1,6 @@
 @use '../../globals/colors';
+@use '../../globals/font-sizes' as fSizes;
+@use '../../globals/icon-sizes' as iSizes;
 
 .account-sidebar {
     right: 0;
@@ -6,6 +8,34 @@
 
     &__signup-prompt {
         height: 50%;
+    }
+
+    &__overview {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        padding-bottom: 1rem;
+        margin-bottom: 0.5rem;
+        border-bottom: 2px solid colors.$bg2
+    }
+
+    &__avatar {
+        height: iSizes.$large;
+        width: iSizes.$large;
+    }
+
+    &__username {
+        font-size: fSizes.$larger;
+    }
+
+    &__logout {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 0.5rem;
+        padding-top: 0.5rem;
+        border-top: 2px solid colors.$bg2;
+        font-size: fSizes.$large;
     }
 
     &.-closed {
