--- a/views/pages/signupForm.pug
+++ b/views/pages/signupForm.pug
@@ -3,4 +3,4 @@ include ../components/form/loggingForm
 
 block loggingForm
     h1.logging-page__heading Sign Up
-    +loggingForm('/signup')
+    +loggingForm('/signup', inputs, errors)
