--- a/views/pages/loginForm.pug
+++ b/views/pages/loginForm.pug
@@ -3,4 +3,4 @@ include ../components/form/loggingForm
 
 block loggingForm
     h1.logging-page__heading Log In
-    +loggingForm('/login')
+    +loggingForm('/login', inputs, errors)
