--- a/views/components/icon/iconButton.pug
+++ b/views/components/icon/iconButton.pug
@@ -2,5 +2,5 @@ mixin iconButton(icon, label=null)
     button.icon-button&attributes(attributes)
         .icon-button__icon
             img(src=icon)
-        if label
+        if label !== null
             .icon-button__label= label
