--- a/views/components/toolbar/contentSidebar.pug
+++ b/views/components/toolbar/contentSidebar.pug
@@ -1,6 +1,6 @@
 include ../list/linkList
 
-#content-sidebar.content-sidebar.sidebar.-closed
+.content-sidebar.sidebar.-closed
     .sidebar__title Content
     .content-sidebar__heading Recent
     .content-sidebar__section
