--- a/views/components/toolbar/accountSidebar.pug
+++ b/views/components/toolbar/accountSidebar.pug
@@ -1,6 +1,6 @@
 include ../list/linkList
 
-#account-sidebar.account-sidebar.sidebar.-closed
+.account-sidebar.sidebar.-closed
     .sidebar__title Account
     if user
         .account-sidebar__overview 
